--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
         <title>2898 Scouter</title>
     </head>
     <body>
+        <div class="box" style="display:none">
+            <h2 class="subtitle is-2">Create file</h2>
+            <p>File type:</p>
+            <div class="select">
+                <select id="filetype">
+                  <option>CSV</option>
+                  <option>QR Code</option>
+                </select>
+              </div><br>
+            
+            <label class="checkbox">
+                <input type="checkbox" id="ls"/>
+                Use local storage
+            </label><br>
+            <button class="button">Create file</button>
+            <button class="button">Cancel</button>
+        </div>
         <h1 class="title is-1">Scouting App</h1>
         <h2 class="subtitle is-2">By Team 2898</h2>
-        <p class="is-size-5">Tip: On a computer, press TAB to switch checkbox/text field, and SPACE to check a checkbox.</p>
+        <p class="is-size-5">Tip: On a computer, press TAB/SHIFT-TAB to switch checkbox/text field, and SPACE to check a checkbox.</p>
         <div class="grid is-col-min-10">
             <div class="cell"><label for="location">Event location:</label>
                 <input class="input" id="location" type="text" placeholder="e.g. Portland, OR"></div>
