--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <button class="button">Create file</button>
             <button class="button">Cancel</button>
         </div>
-        <h1 class="title is-1">Scouting App</h1>
+        <h1 class="title is-1" style="text-align:center;">Scouting App</h1>
         <h2 class="subtitle is-2">By Team 2898</h2>
         <p class="is-size-5">Tip: On a computer, press TAB/SHIFT-TAB to switch checkbox/text field, and SPACE to check a checkbox.</p>
         <div class="grid is-col-min-10">
