Fix dialog not appearing

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <label for="ss10" id="ss10-label" style="display:none">Disabled</label>
         <input class="input" id="ss10" type="checkbox" style="display:none"><br style="display:none">
     --><br>
-        <button onclick="document.getElementById('file-dialog').style.animation='fade-in 2s';" class="button">Create file</button>
+        <button onclick="document.getElementById('file-dialog').style.display='block';document.getElementById('file-dialog').style.animation='fade-in 2s';" class="button">Create file</button>
         <button class="button">Add to local storage</button>
         <button class="button" onclick="help();">Help</button>
         <div id="qrcode"></div>
