--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="favicon.svg">
         <title>2898 Scouter</title>
     </head>
     <body>
