--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>2898 Scouter</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="favicon.svg">
-        <title>2898 Scouter</title>
+        <link rel="apple-touch-icon" href="images/2898-icon.svg">
+        <meta name="apple-mobile-web-app-title" content="Scouter">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <link rel="apple-touch-startup-image" href="images/launchscreen.png">
     </head>
     <body>
         <div class="box" style="display:none" id="file-dialog">
