Remove deprecated warning
apple-mobile-web-app-capable -> mobile-web-app-capable

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="favicon.svg">
         <link rel="apple-touch-icon" href="images/2898-icon.svg">
         <meta name="apple-mobile-web-app-title" content="Scouter">
-        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <link rel="apple-touch-startup-image" href="images/launchscreen.png">
     </head>
