--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="favicon.svg">
+        <link rel="apple-touch-startup-image" href="images/launchscreen.png">
+        <link rel="apple-touch-icon" href="images/2898-icon.svg">
     </head>
     <body>
         <div class="box" style="display:none" id="file-dialog">
