Oops, forgot manifest line

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="icon" href="favicon.svg">
         <link rel="apple-touch-startup-image" href="images/launchscreen.png">
         <link rel="apple-touch-icon" href="images/2898-icon.svg">
+        <link rel="manifest" href="manifest.json">
     </head>
     <body>
         <div class="box" style="display:none" id="file-dialog">
